--- a/LoanCalculator/ClientApp/src/custom.css
+++ b/LoanCalculator/ClientApp/src/custom.css
@@ -12,3 +12,121 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+/* Styles for the calculator */
+
+.calculatorSlider {
+    max-width: 47.5rem;
+    display: flex;
+    width: 100%;
+    margin: 0 auto;
+    align-items: center;
+    position: relative;
+}
+
+.calculatorSlider label {
+    font-size: 1.125rem;
+    flex: 0 0 12.5rem;
+    line-height: 1.75rem;
+    padding-right: 23px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    text-align: right;
+    display: block;
+}
+
+.calculatorSlider .calculatorSlider-slider {
+    display: flex;
+    align-items: center;
+    position: relative;
+    flex: 0 0 22.5rem;
+}
+
+.calculatorSlider .calculatorSlider-slider button.calculatorSlider-slider-minus {
+    left: unset;
+}
+
+.calculatorSlider .calculatorSlider-slider button {
+    position: relative;
+    width: 1.5rem;
+    min-width: 1.5rem;
+    height: 1.5rem;
+    top: unset;
+    right: unset;
+
+    border-radius: 50%;
+    display: inline-block;
+    color: #fff;
+    background: #567592;
+    box-shadow: none;
+    border: 0;
+    margin: 0 0.75rem;
+    padding: 0;
+}
+
+button:not(:disabled) {
+    cursor: pointer;
+}
+
+button {
+    text-transform: none;
+}
+
+.calculatorSlider .calculatorSlider-slider button span {
+    transform: translate(-50%, -60%);
+}
+
+.calculatorSlider .calculatorSlider-slider button span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+}
+
+.calculatorSlider .calculatorSlider-slider input[type="range"] {
+    width: 15.625rem;
+    display: block;
+    height: 0.375rem;
+    border-radius: 0.3125rem;
+    border: 0.0625rem solid #fff;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity 0.2s;
+}
+
+button, input {
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    overflow: visible;
+}
+
+.calculatorSlider-number {
+    height: 2.5rem;
+    flex: 0 0 11.25rem;
+}
+
+.calculatorSlider-number {
+    background: #ebeff5;
+    border-radius: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #222f49;
+    font-size: 1.25rem;
+}
+
+.calculatorSlider-number input {
+    text-align: left;
+}
+
+.calculatorSlider-number input {
+    width: 7.6875rem;
+    margin-left: 1rem;
+    border: 0;
+    background: #ebeff5;
+    color: #222f49;
+    font-size: 1.1875rem;
+}
